# self_host_voice_assistance

./: README.md  pyproject.toml
.devcontainer/golang/: Dockerfile  devcontainer.json
.devcontainer/python/: Dockerfile  devcontainer.json
src/livekit-server/: Dockerfile  bash_config_file_creator.bash  generate_config.sh  readme.md
