[tool.poetry]
name = "Livekit-for-raspberry-pi"
version = "0.1.0"
description = "Livekit components for raspberry pi zero 2w"
authors = ["Oz Shaked <oz.rnds@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
commitizen = "^2.27.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.1"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"
